--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
     <!--Шапка сторінки-->
     <header class="header">
       <div class="conteiner main-nav">
-        <a href="index.html" class="logo">
-          Web<span class="logo-dark">Studio</span>
-        </a>
         <nav class="navigation">
+          <a href="index.html" class="logo">
+            Web<span class="logo-dark">Studio</span>
+          </a>
           <ul class="nav list">
             <li class="item">
               <a href="index.html" class="link">Студия</a>
@@ -37,13 +37,25 @@
         </nav>
         <ul class="contacts list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="contacts-link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="contacts-link">
+              <svg class="icon-mail">
+                <use
+                  href="./images/symbol-defs.svg#icon-email"
+                  class="mail"
+                ></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contacts-link"
-              >+38 096 111 11 11</a
+            <a href="tel:+380961111111" class="contacts-link">
+              <svg class="icon-phone">
+                <use
+                  href="./images/symbol-defs.svg#icon-phone"
+                  class="mail"
+                ></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -74,87 +86,105 @@
           <div class="conteiner">
             <ul class="content list">
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img5.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">Технокряк</h2>
-                  <p class="project-text">Веб-сайт</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img5.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">Технокряк</h2>
+                    <p class="project-text">Веб-сайт</p>
+                  </div>
+                </a>
               </li>
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img6.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">
-                    Постер New Orlean vs Golden Star
-                  </h2>
-                  <p class="project-text">Дизайн</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img6.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">
+                      Постер New Orlean vs Golden Star
+                    </h2>
+                    <p class="project-text">Дизайн</p>
+                  </div>
+                </a>
               </li>
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img7.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">Ресторан Seafood</h2>
-                  <p class="project-text">Приложение</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img7.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">Ресторан Seafood</h2>
+                    <p class="project-text">Приложение</p>
+                  </div>
+                </a>
               </li>
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img8.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">Проект Prime</h2>
-                  <p class="project-text">Маркетинг</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img8.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">Проект Prime</h2>
+                    <p class="project-text">Маркетинг</p>
+                  </div>
+                </a>
               </li>
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img9.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">Проект Boxes</h2>
-                  <p class="project-text">Приложение</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img9.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">Проект Boxes</h2>
+                    <p class="project-text">Приложение</p>
+                  </div>
+                </a>
               </li>
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img10.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">Inspiration has no Borders</h2>
-                  <p class="project-text">Веб-сайт</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img10.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">Inspiration has no Borders</h2>
+                    <p class="project-text">Веб-сайт</p>
+                  </div>
+                </a>
               </li>
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img11.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">Издание Limited Edition</h2>
-                  <p class="project-text">Дизайн</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img11.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">Издание Limited Edition</h2>
+                    <p class="project-text">Дизайн</p>
+                  </div>
+                </a>
               </li>
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img12.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">Проект LAB</h2>
-                  <p class="project-text">Маркетинг</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img12.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">Проект LAB</h2>
+                    <p class="project-text">Маркетинг</p>
+                  </div>
+                </a>
               </li>
               <li class="item">
-                <div class="card-img">
-                  <img src="images/img13.jpg" alt="" width="370" />
-                </div>
-                <div class="card-conteiner">
-                  <h2 class="project-title">Growing Business</h2>
-                  <p class="project-text">Приложение</p>
-                </div>
+                <a href="" class="card-link">
+                  <div class="card-img">
+                    <img src="images/img13.jpg" alt="" width="370" />
+                  </div>
+                  <div class="card-conteiner">
+                    <h2 class="project-title">Growing Business</h2>
+                    <p class="project-text">Приложение</p>
+                  </div>
+                </a>
               </li>
             </ul>
           </div>
@@ -163,32 +193,77 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-      <div class="conteiner">
-        <a href="index.html" class="logo">
-          Web<span class="logo-light">Studio</span>
-        </a>
-        <address>
-          <ul class="address list">
-            <li class="item">
-              <a
-                href="https://goo.gl/maps/vd8JTUUMNeQ3kda19ddres"
-                class="address"
-              >
-                г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="conteiner footer-box">
+        <div>
+          <a href="index.html" class="logo">
+            Web<span class="logo-light">Studio</span>
+          </a>
+          <address>
+            <ul class="address list">
+              <li class="item">
+                <a
+                  href="https://goo.gl/maps/vd8JTUUMNeQ3kda19ddres"
+                  class="address"
+                >
+                  г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a href="mailto:info@devstudio.com" class="address-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="address-link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <!-- ==========присоединяйтесь=============== -->
+        <div class="join-box">
+          <h2 class="join-title">присоединяйтесь</h2>
+          <ul class="join list">
+            <li class="item-icon item">
+              <a href="https://www.instagram.com/" class="join-link">
+                <svg class="join-icon" width="20" height="20">
+                  <use
+                    href="./images/symbol-defs.svg#icon-instagram"
+                    class="insta"
+                  ></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="address-link"
-                >info@devstudio.com</a
-              >
+            <li class="item-icon">
+              <a href="https://twitter.com/" class="join-link">
+                <svg class="join-icon" width="20" height="16.25">
+                  <use
+                    href="./images/symbol-defs.svg#icon-twitter"
+                    class="aaa"
+                  ></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="address-link"
-                >+38 096 111 11 11</a
-              >
+            <li class="item-icon">
+              <a href="https://www.facebook.com/" class="join-link">
+                <svg class="join-icon" width="10" height="20">
+                  <use
+                    href="./images/symbol-defs.svg#icon-facebook"
+                    class="aaa"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-icon item">
+              <a href="https://www.linkedin.com/" class="join-link">
+                <svg class="join-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
