--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Шапка сторінки-->
+    <!--==================Шапка сторінки======================-->
     <header class="header">
       <div class="conteiner main-nav">
         <nav class="navigation">
@@ -37,21 +37,33 @@
         </nav>
         <ul class="contacts list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="contacts-link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="contacts-link">
+              <svg class="icon-mail">
+                <use
+                  href="./images/symbol-defs.svg#icon-email"
+                  class="mail"
+                ></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contacts-link"
-              >+38 096 111 11 11</a
+            <a href="tel:+380961111111" class="contacts-link">
+              <svg class="icon-phone">
+                <use
+                  href="./images/symbol-defs.svg#icon-phone"
+                  class="mail"
+                ></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
       </div>
     </header>
-    <!-- майн -->
+    <!--=====================майн=============================-->
     <main class="main-blok">
-      <!--Блок герой-->
+      <!--==================Блок герой========================-->
       <section class="hero">
         <div class="conteiner">
           <h1 class="hero-title">
@@ -67,27 +79,51 @@
           <h2 class="hidden-title">Особенности</h2>
           <ul class="features list">
             <li class="item">
+              <svg class="icon">
+                <use href="./images/symbol-defs.svg#icon-ant" class="ant"></use>
+              </svg>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало пов седневной работы по
                 формированию позиции.
               </p>
             </li>
+
             <li class="item">
+              <svg class="icon">
+                <use
+                  href="./images/symbol-defs.svg#icon-clock"
+                  class="clock"
+                ></use>
+              </svg>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
+
             <li class="item">
+              <svg class="icon">
+                <use
+                  href="./images/symbol-defs.svg#icon-diagram"
+                  class="diagram"
+                ></use>
+              </svg>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
+
             <li class="item">
+              <svg class="icon">
+                <use
+                  href="./images/symbol-defs.svg#icon-astronaut"
+                  class="icon-astronaut"
+                ></use>
+              </svg>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -98,7 +134,7 @@
         </div>
       </section>
 
-      <!--Блок Чем мы занимаемся-->
+      <!--===============Блок Чем мы занимаемся===============-->
       <section class="section activity">
         <div class="conteiner">
           <h2 class="section-title">Чем мы занимаемся</h2>
@@ -130,7 +166,7 @@
         </div>
       </section>
 
-      <!--Блок Наша команда-->
+      <!--=================Блок Наша команда==================-->
       <section class="section team-section">
         <div class="conteiner">
           <h2 class="section-title">Наша команда</h2>
@@ -145,9 +181,36 @@
               <div class="team-conteiner">
                 <h3 class="team-title">Игорь Демьяненко</h3>
                 <p class="team-text">Product Designer</p>
-              </div>
-            </li>
-
+                <ul class="icon-list list">
+                  <li class="item-icon item">
+                    <a href="https://www.instagram.com/" class="team-link">
+                      <svg class="team-icon"  width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://twitter.com/" class="team-link">
+                      <svg class="team-icon" width="20" height="16.25">
+                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://www.facebook.com/" class="team-link">
+                      <svg class="team-icon" width="10" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon item">
+                    <a href="https://www.linkedin.com/" class="team-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
             <li class="item">
               <img
                 src="images/img1.jpg"
@@ -156,8 +219,38 @@
                 height="260"
               />
               <div class="team-conteiner">
-                <h3 class="team-title">Игорь Демьяненко</h3>
-                <p class="team-text">Product Designer</p>
+                <h3 class="team-title">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
+                <ul class="icon-list list">
+                  <li class="item-icon item">
+                    <a href="https://www.instagram.com/" class="team-link">
+                      <svg class="team-icon"  width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://twitter.com/" class="team-link">
+                      <svg class="team-icon" width="20" height="16.25">
+                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://www.facebook.com/" class="team-link">
+                      <svg class="team-icon" width="10" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon item">
+                    <a href="https://www.linkedin.com/" class="team-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -169,8 +262,38 @@
                 height="260"
               />
               <div class="team-conteiner">
-                <h3 class="team-title">Игорь Демьяненко</h3>
-                <p class="team-text">Product Designer</p>
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
+                <ul class="icon-list list">
+                  <li class="item-icon item">
+                    <a href="https://www.instagram.com/" class="team-link">
+                      <svg class="team-icon"  width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://twitter.com/" class="team-link">
+                      <svg class="team-icon" width="20" height="16.25">
+                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://www.facebook.com/" class="team-link">
+                      <svg class="team-icon" width="10" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon item">
+                    <a href="https://www.linkedin.com/" class="team-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -182,18 +305,104 @@
                 height="260"
               />
               <div class="team-conteiner">
-                <h3 class="team-title">Игорь Демьяненко</h3>
-                <p class="team-text">Product Designer</p>
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
+                <ul class="icon-list list">
+                  <li class="item-icon item">
+                    <a href="https://www.instagram.com/" class="team-link">
+                      <svg class="team-icon"  width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://twitter.com/" class="team-link">
+                      <svg class="team-icon" width="20" height="16.25">
+                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://www.facebook.com/" class="team-link">
+                      <svg class="team-icon" width="10" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon item">
+                    <a href="https://www.linkedin.com/" class="team-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <!--Футер-->
-    <footer class="footer">
+    <!--================Постоянные клиенты======================-->
+    <section class="section">
       <div class="conteiner">
-        <a href="index.html" class="logo">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="clients-list list">
+          <li class="item clients"> 
+            <a href="index.html" class="clients-link">
+              <svg class="client-icon">
+                <use href="./images/symbol-defs.svg#icon-Logo"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients"> 
+            <a href="index.html" class="clients-link">
+              <svg class="client-icon">
+                <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients"> 
+            <a href="index.html" class="clients-link">
+              <svg class="client-icon">
+                <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients"> 
+            <a href="index.html" class="clients-link">
+              <svg class="client-icon">
+                <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients"> 
+            <a href="index.html" class="clients-link">
+              <svg class="client-icon">
+                <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients"> 
+            <a href="index.html" class="clients-link">
+              <svg class="client-icon">
+                <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--======================Футер=============================-->
+    <footer class="footer">
+      <div class="conteiner footer-box">
+        <div>
+          <a href="index.html" class="logo">
           Web<span class="logo-light">Studio</span>
         </a>
         <address>
@@ -218,6 +427,41 @@
             </li>
           </ul>
         </address>
+        </div>
+        <!-- ==========присоединяйтесь=============== -->
+        <div class="join-box">
+          <h2 class="join-title">присоединяйтесь</h2>
+        <ul class="join list">
+              <li class="item-icon item">
+                    <a href="https://www.instagram.com/" class="join-link">
+                      <svg class="join-icon"  width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://twitter.com/" class="join-link">
+                      <svg class="join-icon" width="20" height="16.25">
+                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a href="https://www.facebook.com/" class="join-link">
+                      <svg class="join-icon" width="10" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon item">
+                    <a href="https://www.linkedin.com/" class="join-link">
+                      <svg class="join-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
