--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
           <h2 class="hidden-title">Особенности</h2>
           <ul class="features list">
             <li class="item">
-              <svg class="icon">
+              <div class="features-icon">
+                <svg class="icon">
                 <use href="./images/symbol-defs.svg#icon-ant" class="ant"></use>
               </svg>
+              </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало пов седневной работы по
@@ -90,12 +92,12 @@
             </li>
 
             <li class="item">
-              <svg class="icon">
+              <div class="features-icon"><svg class="icon">
                 <use
                   href="./images/symbol-defs.svg#icon-clock"
                   class="clock"
                 ></use>
-              </svg>
+              </svg></div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -104,12 +106,14 @@
             </li>
 
             <li class="item">
-              <svg class="icon">
+              <div class="features-icon">
+                <svg class="icon">
                 <use
                   href="./images/symbol-defs.svg#icon-diagram"
                   class="diagram"
                 ></use>
               </svg>
+              </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
@@ -118,12 +122,14 @@
             </li>
 
             <li class="item">
-              <svg class="icon">
+              <div class="features-icon">
+                <svg class="icon">
                 <use
                   href="./images/symbol-defs.svg#icon-astronaut"
                   class="icon-astronaut"
                 ></use>
               </svg>
+              </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
